regression/smv/syntax-errors/syntax3.desc
CORE
syntax3.smv

^file .* line 3: syntax error, unexpected identifier, expecting number before 'not_a_number'$
^EXIT=1$
^SIGNAL=0$
--
